--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
 <body>
